--- a/src/pages/lessons/styles.css
+++ b/src/pages/lessons/styles.css
@@ -5,7 +5,6 @@
         min-height: 200px;
     }
 
-
     .table-cell-title {
         font-size: 1em;
         text-overflow: ellipsis;
@@ -98,6 +97,26 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.grid-item {
+    background-color: white;
+    position: relative;
+    padding: 50px 25px 90px 25px;
+}
+
+.date {
+    border-top: 1px solid #ebedf2;
+    border-bottom: 1px solid #ebedf2;
+    padding: 10px 0;
+    align-items: center;
+}
+
+.link-container {
+    justify-content: flex-start;
+    left: 25px;
+    position: absolute;
+    bottom: 30px;
 }
 
 
